Added branded header. related #9

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@ A copy of the license is included in the section entitled
 <head>
     <title>Bash Reference Manual</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- @TODO: METADATA-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- @TODO: all devices compatibility favicon-->
@@ -28,7 +28,16 @@ A copy of the license is included in the section entitled
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
-<body lang="en">
+<body lang="en"> 
+    <header>
+        <div class="header">
+            <img class="header__img" src="assets/img/bash_header_logo.svg" alt="bash logo">
+            <p class="header__text">Bash reference manual</p>
+        </div>
+    </header>
+
+
+    
     <h1 class="settitle">Bash Reference Manual</h1>
     <a name="SEC_Contents"></a>
     <h2 class="contents_heading">Table of Contents</h2>
