Mobile design improvements (appendixes hidden, links hover, etc...). Related #11

--- a/src/index.html
+++ b/src/index.html
@@ -10582,6 +10582,8 @@ history -ps <var>arg</var>
         <samp>#define</samp>’ statements for options which are not settable from
         <code>configure</code>. Some of these are not meant to be changed; beware of the consequences if you do. Read the comments associated with each definition for more information about its effect.
     </p>
+    
+    <section class="appendixes">
     <hr>
     <a name="Reporting-Bugs"></a>
     <div class="section-navigation">
@@ -15488,6 +15490,7 @@ of this license document, but changing it is not allowed.
         </tr>
     </tbody></table>
     <hr>
+    </section>
     </main>
 </body>
 
